data/derived/comb/progs/unify/prog0422.ml.out
Characters 20-21:
  let _ = List.split [9;1;1;1;];;
                      ^
Error: This expression has type int but an expression was expected of type
         'a * 'b
